--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,10 @@
 /*Header Items*/
 
+
+body {
+  margin: 0;
+}
+
 header {
  display: flex;
  font-family: Verdana;
@@ -30,7 +35,7 @@ div.logo {
 }
 
 /*Navigation section*/
-nav {
+header nav {
   padding-right: 40px;
 }
 nav span {
@@ -44,34 +49,53 @@ span a{
 /*Main Content Container*/
 .content {
   display: flex;
-  width: 1230px;
+  width: 1232px;
   margin: 0 auto 78px auto;
   padding-top: 116px;
 
 }
-div {
+/* remove borders div {
   border: 1px solid black;
-}
+}*/
+
 /*Common Elements*/
 .column {
   flex-direction: column;
   display: flex;
-  margin-right: 30px;
+  margin-right: 32px;
 }
 
 .articles {
+  display: flex;
+  justify-content: space-between;
+
 
 }
 .article {
-  
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+
 }
 .story-column {
 
 }
 .image-content {
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-family: Georgia;
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
+  height: 300px;
+  text-align: center;
+  margin-top: 15px;
 }
 .story-content {
+  font-family: Georgia;
+  font-size: 17px:
+  color: black;
 
 }
 h2 {
@@ -85,26 +109,97 @@ h3 {
 
 
 /*First news column*/
-.column large {
-  width:630px;
-
+.column.large {
+  width: 630px;
 }
 .main-story {
 
 }
-.
+.main-story .image-content span {
+  margin-left: 20px;
+}
 
+.main-story .image-content {
+  background-image: url("../images/img-story-main.png");
+  width: 630px;
+  font-size: 40px;
+  text-align: left;
+  margin-top: 0;
+
+}
+
+.fall-cancelled.image-content {
+  background-image: url("../images/img-story-2.png");
+}
+
+.pop-culture.image-content {
+  background-image: url("../images/img-story-3.png");
+}
+
+.stories .text-content {
+  height: 250px;
+}
 /*Second news column*/
-.column medium {
+.column.medium {
   width: 300px;
+}
+
+.cat-ceo.image-content {
+  background-image: url("../images/img-story-1.png");
 }
 /*Third news column*/
-.column small {
-  width: 300px;
-}
-.news-bites {
+.column.small {
+  width: 240px;
 
 }
+.news-bites {
+  flex-direction: column;
+}
+
+.news-bites h3 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
 .bite {
+  display: block;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  border-bottom: 1px solid black;
+  padding: 10px 20px;
+
+}
+/*Footer*/
+footer {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  height: 325px;
+
+}
+.info {
+
+}
+footer .title {
+  display: inline-block;
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border-right: 2px solid white;
+  padding-right: 25px;
+}
+
+footer nav {
+  display: inline-block;
+  padding-left: 15px;
 
 }
